2025-08-16 AIDA Shinra <shinra@j10n.org>
	* [Merged] from the SFJP trunk on 2004-04-10:
	* [Canna-dev 297]: romaji-yuusen & canna-do-function
	* lib/canna/romaji.c(Yomisearchfunc): override keymap only when no
	  function is specified (i.e. not KC_DO, multisequence, ...)

2025-08-15 AIDA Shinra <shinra@j10n.org>
	* [Merged] from STABLE-3.7 branch:
	* CHANGES.jp: updated for 3.7p5
	* Canna.conf.dist: static libraries were not built. fixed.
	* configure.ac: bump to 3.7p5
	* canna/patchlevel.h: ditto
	* .gitignore: add more generated files
	* lib/RKC/.gitignore: ditto
	* lib/RKC16/.gitignore: ditto
	* lib/canna/.gitignore: ditto
	* lib/canna16/.gitignore: ditto

2025-08-14 AIDA Shinra <shinra@j10n.org>
	* [Merged] from the SFJP trunk on 2004-03-15:
	* [Canna-dev 291]: Return from temporary mode after quit.
	* lib/canna/chikuji.c(ChikujiYomiDeletePrevious): restoreFlags()
	  (ChikjiMuhenkan): ditto
	* lib/canna/empty.c(EmptyQuit): ditto
	* lib/canna/romaji.c(YomiExit): ditto
	  (YomiQuit): ditto
	  (exitSupkey): ditto

2025-08-14 AIDA Shinra <shinra@j10n.org>
	* [Merged] from the SFJP trunk on 2004-03-15:
	* [Canna-dev 292]: Problems when handling "bbb..."
	* lib/canna/romaji.c(clearYomiContext): Clear yc->n_susp_chars.
	  (KanaDeletePrevious): Tweak break-into-roman behaviour.
	  Properly change rCurs and rStartp after deleting first kana.
	  Change behaviour after deleting all unconverted romaji.
	  (YomiDeleteNext): debug_yomi

2025-06-09 AIDA Shinra <shinra@j10n.org>
	* Canna 3.7p4 release again.
	* README: fixed URL to the official site
	* README.jp: ditto
	* canuum/README.jp: ditto

2025-06-08 AIDA Shinra <shinra@j10n.org>
	* Canna 3.7p4 release.
	* CHANGES.jp: updated for 3.7p4
	* COPYRIGHT: updated
	* INSTALL: updated; SFJP -> github
	* INSTALL.jp: ditto
	* README: ditto
	* README.jp: ditto
	* canuum/README.jp: ditto
	* configure.ac: bump to 3.7p4
	* canna/patchlevel.h: ditto
	* doc/Imakefile: remove canna.sty in make clean
